			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------


  * ADDED: library(clp/clp_tuples.pl), Symbolic constraints on tuples.
    Contributed by  Markus Triska.

  * PORT: Bug#110: Solaris float handling.  Andreas Vögele.

  * FIXED: IO_RECORDPOS handling.  Bug exposed by changes for UTF-16 I/O
    on Windows.  Dmitry and Holger Kanwischer.

=================================
VERSION 5.5.36 (October 24, 2005)
=================================

  * FIXED: UTF-16 I/O on Windows systems.  Dmitry.

  * FIXED: integer arithmetic returning results between -1<<63 and -1<<31.
    Leslie de Koninck.

=================================
VERSION 5.5.35 (October 19, 2005)
=================================

  * ENHANCED: delete choicepoint of catch/3, maintaining last call
    optimization in goals using catch/3 on deterministic code.  Leslie
    de Koninck.

  * FIXED: Bug#104: float formatting.  Holger Kanwischer.

  * FIXED: Memory leak in sformat/3.  Mike Elston.

=================================
VERSION 5.5.34 (October 11, 2005)
=================================

  * PORT: Deal with systems that breakdown arguments of #! scripts.

  * ADDED: message_queue_size/2.  Woon Kiong.

  * FIXED: Singleton warning for variables with Unicode name.  Dmitry.

  * PORT: Bug#90: parallel make.  Mike Frysinger.

  * PORT: Bug#97: Some packages configure issues.  Mike Frysinger.

  * FIXED: abs/1 for large integers and rationals.  Mike Elston.

===================================
VERSION 5.5.33 (September 30, 2005)
===================================

  * FIXED: when/2: unifyable -->unifiable.  Grzegorz Chrupała.

  * ADDED: Allow hooking into output of library(debug).  Added XPCE Gui
    frontend for the debugging library called with prolog_debug_monitor/0.
